# openclaw-avatarcam

./: .gitignore  .npmignore  README.md  package.json  test_bg_logic.js
docs/: setup.md
macos-virtualcam/: AvatarCamStream.cpp  AvatarCamStream.hpp  DALPluginMain.cpp  Info.plist  SharedMemoryReader.cpp  SharedMemoryReader.hpp  test_shm_reader.py
skill/: SKILL.md
src/: index.html  main.js  renderer.js
tests/: README.md  test_gen_video.js  test_lipsync.sh  test_relay.js  test_runner.js
tools/: avatarcam  standalone_gen.js  video_cli.js
web-avatar/: index.html  main.js  package.json  renderer.js
web-avatar/backend/: api.js
windows-virtualcam/: CMakeLists.txt  DllEntry.cpp  VirtualCam.cpp  VirtualCam.h  register.bat  unregister.bat
